--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>OpenLearny</title>
     <link rel="icon" type="image/svg+xml" href="/assets/openlearnyWhiteLogo.svg" media="(prefers-color-scheme: dark)">
     <link rel="icon" type="image/svg+xml" href="/assets/openlearnyDarkLogo.svg" media="(prefers-color-scheme: light)">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css//style.css">
 </head>
 
 <body>
@@ -359,8 +359,8 @@
         </div>
     </footer>
 
-    <script src="js/theme.js"></script>
-    <script src="js/mobile-toggle.js"></script>
+    <script src="js//theme.js"></script>
+    <script src="js//mobile-toggle.js"></script>
 
 
 </body>
